# Diabetes-Readmission-Prediction

./: Dockerfile  Modeling.ipynb  README.md  main.py  model_xgb.pkl  predict.py  pyproject.toml  requirements.txt  serve.py  train.py
.ipynb_checkpoints/: EDA-checkpoint.ipynb
