[project]
name = "diabetes-readmission-prediction"
version = "0.1.0"
description = "Machine learning model predicting hospital readmission for diabetic patients"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "xgboost",
    "fastapi",
    "uvicorn",
    "requests",
]
